feat: 完善新增会员信息录入
